[sources] Fix missing horizontal scrollbar for Watch pane.
Fixed: chromium:1338117
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5009940
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/sources/watchExpressionsSidebarPane.css
+++ b/front_end/panels/sources/watchExpressionsSidebarPane.css
@@ -34,7 +34,6 @@
 }
 
 .watch-expressions {
-  overflow-x: hidden;
   min-height: 26px;
 }
 
